successfully integrates swagger-router
