# _build/openapi.yaml
@@ -4,11 +4,24 @@ info:
   version: 1.0.0
   title: API Docs
 servers:
-  - url: 'http://localhost:3000/v1'
+  - url: /api/v1
 paths:
   /users:
+    get:
+      summary: Returns a list of users.
+      operationId: getAllUsers
+      description: Optional extended description in CommonMark or HTML
+      responses:
+        '200':
+          description: A JSON array of user names
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: string
     post:
-      summary: Creates a category.
+      summary: Creates a user.
       requestBody:
         required: true
         content:
