# api/controllers/users-controller.js
@@ -1,7 +1,9 @@
+exports.getAllUsers = (req, res, next) => {
+  res.json(['User 1', 'User 2', 'User 3']);
+}
+
 exports.createUser =  (req, res, next) => {
   const user = new User(req.swagger.body);
   console.log(req.swagger)
   return res;
 };
-
-// APPROACH THE OPEN API FILES BY BREAKING THEM INTO SEPARATE COMPONENTS IN A MASTER YAML FILE THEN BUNDLE THEM
