# api/index.js
@@ -1,5 +1,6 @@
-const { createUser } = require('./controllers/users-controller');
+const { createUser, getAllUsers } = require('./controllers/users-controller');
 
 module.exports = {
   createUser,
+  getAllUsers,
 }
